# key-value-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker_hub_publish.yaml
src/: main.rs  storage.rs
