[package]
name = "key-value-server"
version = "0.1.0"
authors = ["Zhuoran Tan <t@zhuorantan.com>"]
edition = "2021"
description = "A simple key-value store http server"
homepage = "https://github.com/zhuorantan/key-value-server"
repository = "https://github.com/zhuorantan/key-value-server"
license = "MIT"
keywords = ["key-value", "http"]
categories = ["network-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "3.1", features = ["derive", "env"] }
serde_json = "1.0"
